ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:														  \
|		 - GUI:													  |
|				* to fix: no errors on adding user (custom HP)	  |
\_________________________________________________________________/

2008-02-02 Benedikt Heintel
	- SETUP:
		* Fixed #981: bind fails

2008-01-27 Benedikt Heintel
	- SETUP:
		* Fixed #926: vhcs 2.4.71 update no apache config
		* Fixed #966: Updatescripts fails Update RC2x -> RC3

2008-01-27 Christian Hernmarck
	- GUI:
		* Fixed a small error in client/webtools.php which always showed debug variables...

2008-01-24 Benedikt Heintel
	- ENGINE:
		* Fixed #965: Error in ispcp-dmn-mngr
	- SETUP:
		* Fixed #958: Some Errors in Updatescript

2008-01-21 Benedikt Heintel
	- CONFIG:
		* Fixed #960: Bind error hostmaster -> postmaster

2008-01-17 Benedikt Heintel
	- DISTROS:
		* Fixed #464: Errors in SuSE Installation " yast -i `cat ./docs/SuSE/suse-packages`"
		* Fixed #515: fastcgi module OpenSuse 10.2
		* Fixed #797: Error in package list for Suse
		* Fixed #814: named db dir setting in ispcp fedora
	- ENGINE:
		* Fixed #725: Problem with autoresponder and amavis

2008-01-15 Benedikt Heintel
	- GUI:
		* Added: AWStats link in client's webtools
	- SETUP:
		* Fixed #958: Some Errors in Updatescript

2008-01-14 Benedikt Heintel
	- SETUP:
		* Fixed #55: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0 RC3
						and from ispCP ω 1.0.0 RC2 to ispCP ω 1.0.0 RC3
		* Fixed #955: "ispcp" Folder in /etc/apache2 is missing

2008-01-13 Benedikt Heintel
	- SETUP:
		* Fixed #953: update script fails to start
	- TOOLS:
		* Updated phpMyAdmin to version 2.11.4 RC1 (#949)

2008-01-13 Christian Hernmarck
	- ENGINE:
		* Fixed #947: file change during tar/backup stopps all other following backups

2008-01-12 Benedikt Heintel
	- DOCS:
		* Changed debian-packages-etch
	- SETUP:
		* Updated: added RC2 -> RC3 update to Update Script (not yet completed)