@@ -27,16 +27,17 @@
 <IfModule mod_fastcgi.c>
 	FastCgiWrapper On
 	FastCgiIpcDir /var/lib/apache2/fastcgi
-	FastCgiConfig -minProcesses 1 \
-	              -maxProcesses 400 \
-	              -maxClassProcesses 5 \
-	              #-singleThreshold 100 \
-	              -multiThreshold 80 \
-	              -killInterval 60 \
-	              -startDelay 5 \
-	              #-autoUpdate \
-	               -idle-timeout 300
-	              #-pass-header HTTP_AUTHORIZATION
+
+        FastCgiConfig -minProcesses 1 \
+                      -maxProcesses 400 \
+                      -maxClassProcesses 5 \
+                      -multiThreshold 80 \
+                      -killInterval 60 \
+                      -startDelay 5 \
+                      -idle-timeout 300
+                      # -singleThreshold 100 \
+                      # -autoUpdate \
+                      # -pass-header HTTP_AUTHORIZATION
 
 	FastCgiServer {PHP_STARTER_DIR}/master/php{PHP_VERSION}-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
 
